# ccf

./: .gitignore  BuildHelpers.cmake  CancellarConfig.cmake  CompilerConfig.cmake  FindBoost.cmake  FindDwarf.cmake  FindEasylogging.cmake  FindX11_XCB.cmake  FindXCB.cmake  FindXKB.cmake  GroupInVisualStudio.cmake  MagicAssets.cmake  README.md  build_helpers.cmake  cancellar_config.hxx  ccf_3p.cmake  ccf_config.cmake  ccf_config.hxx  ccf_init.cmake  include_guard.cmake
3p/: SPSCQueue.cmake  backward-cpp.cmake  catch2.cmake  debug_assert.cmake  fakeit.cmake  glbinding.cmake  glm.cmake  glslang.cmake  hana.cmake  magic_enum.cmake  magic_get.cmake  nlohmann_json.cmake  ranges.cmake  reflect.cmake  span.cmake  spdlog.cmake  stb.cmake  tsar.cmake  vma.cmake
assets/: CMakeLists.txt  gitignore-build  gitignore-main
preset/: 3d.cmake  basic.cmake  build-boost.sh  extra.cmake  init-basic.bat  init-basic.sh  init-extra.sh  minimal.cmake  sfml.cmake
third-parties/: asio.cmake  backward-cpp.cmake  better-enums.cmake  catch.cmake  fakeit-catch.cmake  glm.cmake  gsl.cmake  hana.cmake  hayai.cmake  json.cmake  lua.cmake  openal.cmake  opengl.cmake  python_interpreter.cmake  rang.cmake  range-v3.cmake  sfml.cmake  spdlog.cmake  third-party-helper.cmake  threads.cmake  x11.cmake  x11_xcb.cmake  xcb.cmake  xkb.cmake
vendor-libs/: asio.cmake  backward-cpp.cmake  better-enums.cmake  boost.cmake  catch.cmake  easylogging.cmake  eggs-variant.cmake  fakeit-catch.cmake  glm.cmake  gsl.cmake  hana.cmake  hayai.cmake  jeayeson.cmake  json.cmake  lua.cmake  openal.cmake  opengl.cmake  (+17 more)
(+25 files in other folders)
