
CMAKE_MINIMUM_REQUIRED( VERSION 3.6 )

PROJECT( ADD_PROJECTNAME )

SET( CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH} )
INCLUDE( preset/basic )

ADD_VENDOR_INCLUDES()

# ADD_SUBDIRECTORY ( ... )

# packaging
SET(CPACK_GENERATOR "ZIP")
INCLUDE( CPack )
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "${PROJECT_BINARY_DIR}/install")
